# SubTgBot

./: CMakeLists.txt  StringUtils.h  jsonutils.cpp  jsonutils.h  logging.cpp  logging.h  main.cpp  messagehandler.cpp  messagehandler.h
modules/: pimodule.cpp  pimodule.h
